--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="main-header">
     <div class="wrapper">
         <a img href="#home" class="logo">
-            <img src="Logo.svg">
+            <img src="/assets/logo.svg">
         </a>
         <nav class="menu">
             <a href="#home">Home</a>
