--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="stylefooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,10 +42,11 @@
           <div class="footer-section contact-legal">
             <div class="contact-info">
               <h3>Informações de Contato</h3>
-              <p><strong>E-mail:</strong> atendimento@loterias365.com</p>
-              <p><strong>Telefone:</strong> +55 11 96531-5697</p>
-              <p><strong>Horário de Atendimento:</strong> Segunda a Sexta, das 10h às 21h</p>
+              <p><strong>E-mail:<br></strong> atendimentoloterias365@loterias365.com</p>
+              <p><strong>Telefone:<br></strong> +55 11 96131-5507</p>
+              <p><strong>Horário de Atendimento:<br></strong> Segunda a Sexta, das 10h às 21h</p>
             </div>
+            <div class="linha-divisoria"></div>
             <div class="legal-info">
               <h3>Informações Legais</h3>
               <p>A Loterias365 não possui qualquer vínculo com a Caixa Econômica Federal e é uma empresa independente que realiza intermediação. Todos os produtos lotéricos oferecidos na plataforma devem e serão processados pelos agentes oficiais da Caixa Econômica Federal.</p>
@@ -51,8 +55,8 @@
         </div>
       
         <div class="footer-bottom">
-          <p>Ajm Setor Cobrança LTDA | CNPJ: 53.096.242/0001-97 | R. Xavantes - Brás, São Paulo - SP, 03027-900</p>
-          <p>Copyright © 2024 Loterias365 - Todos os direitos reservados</p>
+          <p class="rights">Aym Setor Cobrança LTDA | CNPJ: 53.096.242/0001-97 | R. Xavantes - Brás, São Paulo - SP, 03027-900</p>
+          <p class="rights">Copyright © 2024 Loterias365 - Todos os direitos reservados</p>
         </div>
       </footer>
       
