--- a/footer.html
+++ b/footer.html
@@ -16,6 +16,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="wrapper">
     <footer>
         <div class="footer-container">
           <div class="footer-section logo">
@@ -59,6 +60,6 @@
           <p class="rights">Copyright © 2024 Loterias365 - Todos os direitos reservados</p>
         </div>
       </footer>
-      
+  </div>
 </body>
 </html>
